# susops

./: .gitignore  CLAUDE.md  LICENSE  PLAN-REVIEW-LOG.md  PLAN.md  README.md  pyproject.toml  version.py
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: release.yml  release2.yml  test.yml
docs/: openapi.yaml
docs/superpowers/plans/: 2026-04-10-tui-dashboard-redesign.md  2026-04-11-udp-port-forward.md  2026-04-12-ci-cd-and-packaging.md  2026-04-12-core-improvements.md  2026-04-12-testing-and-bugfixes.md  2026-04-12-ux-polish.md  2026-04-23-packaging.md  2026-06-04-services-daemon.md  2026-06-04-tui-tray-test-automation.md  2026-06-12-mac-tray-config-window.md  2026-06-13-mac-tray-3col-layout.md
docs/superpowers/specs/: 2026-04-10-tui-dashboard-redesign.md  2026-04-11-udp-port-forward-design.md  2026-04-23-packaging-design.md  2026-06-12-mac-tray-config-window-design.md  2026-06-13-mac-tray-3col-redesign-design.md
packaging/aur/: PKGBUILD  susops-tray.desktop
packaging/homebrew/Casks/: susops.rb
packaging/homebrew/Formula/: susops.rb
packaging/linux/: susops-services.service
packaging/macos/: entry_tray.py  org.susops.services.plist  susops.icns  susops.spec
scripts/: build-local.sh  compute_resource_shas.py  update_aur_pkgver.py  update_homebrew_sha.py
src/susops/: __init__.py  client.py  facade.py  version.py
src/susops/core/: __init__.py  bandwidth.py  browsers.py  config.py  log_style.py  pac.py  ports.py  process.py  reconnect_daemon.py  rpc_protocol.py  rpc_server.py  services_daemon.py  share.py  socat.py  ssh.py  ssh_config.py  status.py  types.py
src/susops/tray/: __init__.py  base.py  config_window_model.py  debug_server.py  linux.py  mac.py  mac_config_window.py
src/susops/tui/: __main__.py  app.py  app.tcss  cli.py
src/susops/tui/screens/: __init__.py  config_editor.py  connection_editor.py  connections.py  dashboard.py  log_viewer.py  pac_viewer.py  share.py  shares.py
src/susops/tui/widgets/: bandwidth_chart.py  connection_card.py  log_panel.py  status_indicator.py
tests/: conftest.py  test_bw_totals.py  test_cli.py  test_client.py  test_config.py  test_conftest_smoke.py  test_facade.py  test_openapi.py  test_pac.py  test_packaging.py  test_process.py  test_rpc_protocol.py  test_rpc_server.py  test_scripts.py  test_services_daemon.py  test_share.py  test_share_aiohttp.py  test_socat.py  test_ssh.py  test_status.py  test_update_homebrew_sha.py  test_version.py
tests/tray/: conftest.py  test_browser_launch.py  test_config_window_model.py  test_connection_actions.py  test_debug_server.py  test_forward_actions.py  test_gui_smoke.py  test_lifecycle.py  test_pac_actions.py  test_share_actions.py  test_workspace_override.py
tests/tui/: conftest.py  test_connections_screen.py  test_dashboard.py  test_error_paths.py  test_navigation.py  test_shares_screen.py
tools/: gen_openapi.py  tray_debug.py
