[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "susops"
version = "3.0.0"
description = "SusOps — SSH SOCKS5 proxy manager with PAC server, Textual TUI, and system tray apps"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.13.3",
    "ruamel.yaml>=0.18",
    "psutil>=5.9",
    "aiohttp>=3.9",
    "cryptography>=42",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80",
    "textual-plotext>=0.2",
]
# System packages (not installable via pip):
#   - Linux tray (susops-tray): python3-gi + gtk3 + libayatana-appindicator
#       Arch:   sudo pacman -S python-gobject gtk3 libayatana-appindicator
#       Ubuntu: sudo apt install python3-gi gir1.2-gtk-3.0 gir1.2-ayatana-appindicator3-0.1
#   - UDP port forwarding: socat
#       macOS:  brew install socat
#       Arch:   sudo pacman -S socat
#       Ubuntu: sudo apt install socat
tray-mac = [
    "rumps>=0.4",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "textual-dev",
    "packaging",  # tools/gen_openapi.py: normalise the spec version string
]

[project.scripts]
susops = "susops.tui.__main__:main"
so = "susops.tui.__main__:main"
susops-services = "susops.core.services_daemon:main"

[project.gui-scripts]
susops-tray = "susops.tray:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
susops = [
    "assets/*.png",
    "assets/icons/**/*.svg",
    "assets/icons/**/*.png",
    "tui/**/*.tcss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "gui: tests that exercise a real GUI runtime (rumps / AppKit); macOS-only, opt-in via `pytest -m gui`",
]
